# xdoc

./: AT.txt  README.md  gdb.txt  my_configs.vim  ssh.sh  ubuntu.txt  virtualbox.txt
buildroot/: buildroot.md
debug/: gdb.txt
dts/: dts.md
git-ssh-key/: multi-user-config.md
gpu/: gpu_introduce.md
makefile/: CMakeLists.txt  Makefile.c  Makefile.cpp  getting_start_makefile.md  makefile.md
mipi/: mipi_note.md
mount/: cifs.md
net/: route_dev.md
octave/: octave.md
pandoc/: gpt1.txt  pandoc.txt
python/: py_pdb.md  python-pip.txt
qemu/: qemu.md
regex/: regex.md
scripts/: func.sh  git.md  interfaces  tcpdump.md
serdes/: max9296.md
serdes/max9296/: 9295_9296.sh  9296.pipeU.portB.sh  9296.pipeY.portB.sh  9296.portA.sh  9296.portB.min.sh  9296.portB.sh  maxi9296_drvnote.txt  note.txt
serdes/max9296/splitter/: MAX9296A+_dual_PortA+B+to+MIPI+A+_IMX390.cpp  splitter.mipiA.sh  splitter.recvok.sh  splitter.sh
serdes/max9296/splitter/debug/: debug.sh  reset.sh  tof.sh
shell/: sed.txt
ssh/: ssh_gpt.md
stm32/: keil_env.md
systemctl/: systemctl.md
ubi/: ubi.md  update.sh
ubuntu/: conda.txt  fcitx.md  ubuntu.txt  updateTags.sh
ubuntu.20.04.3/: conda.txt  opencv.txt  ubuntu.txt
ubuntu.20.04.3/git-ssh-key/ssh/: config
ubuntu/rules/: 50-usb-serial.rules  51-usb.rules
udisk_boot_system/: udisk_win_system.md
uefi/: UEFI.md
vivado/microblaze/: note.txt
vivado/verilog/: note.md
windows/: win10_install.md  win7_disable_update.md
